welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:5: error: ';' expected but '.' found.
   	if (c)== color.pink) {
                      ^